k8s/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-consumer
  template:
    metadata:
      labels:
        app: order-consumer
    spec:
      containers:
      - name: consumer
        image: soat4/order-service:latest
        command: ["bundle", "exec", "rails", "runner", "StartPagamentoConsumer.run"]
